--- a/index.html
+++ b/index.html
@@ -1895,7 +1895,7 @@
 	  showUpgradeMenu(index);
 	}
 
-
+	let buildMenuUpdateTimer = null;
 	function showBuildMenu(index) {
 	  if (buildMenuUpdateTimer) {
 		clearInterval(buildMenuUpdateTimer);
